<resources>
    <string name="app_name" translatable="false">SEI804 VideoInfoOverlay</string>
    <string name="starting">Starting…</string>
    <string name="video_format">Video Format:</string>
    <string name="video_resolution">Video Resolution:</string>
    <string name="display_resolution">Display Resolution:</string>
    <string name="color_space">Color Space:</string>
    <string name="hdr_status">HDR Status:</string>
    <string name="hdr_policy">HDR Policy:</string>
    <string name="hdr_priority">HDR Priority:</string>
    <string name="audio_format">Audio Format:</string>
    <string name="audio_mode">Audio Mode:</string>
    <string name="app_name_tv">App Name:</string>
    <string name="app_memory_usage">App Memory:</string>
    <string name="cpu_usage">CPU Load:</string>
    <string name="cpu_index">CPU %d Clock:</string>
    <string name="cpu_governor">CPU Governor:</string>
    <string name="memory_usage">Memory Usage:</string>
    <string name="time">Time:</string>
    <string name="connection">Connection:</string>
    <string name="follow_source">Follow Source (Player-Led)</string>
    <string name="follow_sink">Follow Sink (TV-Led)</string>
    <string name="auto">Auto</string>
    <string name="passthrough">Passthrough</string>
    <string name="manual">Manual</string>
    <string name="wifi">Wi-Fi</string>
    <string name="ethernet">Ethernet</string>
    <string name="overlay_options">Overlay</string>
    <string name="background_options">Background</string>
    <string name="distance_options">Distance</string>
    <string name="corner_options">Rounded corners</string>
    <string name="text_options">Text</string>
    <string name="about">About</string>
    <string name="restart_overlay_toast">Please restart the overlay to see the change.</string>
    <string name="no_connectivity">No internet connection</string>
    <string name="mbps">%.2f Mbps</string>
    <string name="overlay_button">Button for remote control</string>
    <string name="overlay_button_summary">Select the button for the remote control to start the overlay.</string>
    <string name="select_button">Select button</string>
    <string name="right_margin">Right edge margin</string>
    <string name="right_margin_summary">Select the distance to the right edge of the screen for the overlay.</string>
    <string name="top_margin">Top edge margin</string>
    <string name="top_margin_summary">Select the distance to the top edge of the screen for the overlay.</string>
    <string name="both_margin">Middle margin</string>
    <string name="both_margin_summary">Select the distance to the middle of the two overlays.</string>
    <string name="text_size">Text size</string>
    <string name="text_size_summary">Select a text size for the overlay.</string>
    <string name="text_padding_summary">This option can be used to change the distance between the overlay and the text.</string>
    <string name="text_padding">Text padding</string>
    <string name="text_color_left">Left text color</string>
    <string name="text_color_left_summary">Select a text color for the left overlay.</string>
    <string name="text_color_right">Right text color</string>
    <string name="text_color_right_summary">Select a text color for the right overlay.</string>
    <string name="left_text_alignment">Left overlay text alignment</string>
    <string name="left_text_alignment_summary">This option sets the text alignment for the left overlay.</string>
    <string name="right_text_alignment">Right overlay text alignment</string>
    <string name="right_text_alignment_summary">This option sets the text alignment for the right overlay.</string>
    <string name="text_font">Text font</string>
    <string name="text_font_summary">Select a text font for the overlay.</string>
    <string name="background_color_left">Left background color</string>
    <string name="background_color_left_summary">Select a background color for the left overlay.</string>
    <string name="background_color_right">Right background color</string>
    <string name="background_color_right_summary">Select a background color for the right overlay.</string>
    <string name="background_alpha_left">Left background transparency</string>
    <string name="background_alpha_left_summary">Select a background transparency for the left overlay.</string>
    <string name="background_alpha_right">Right background transparency</string>
    <string name="background_alpha_right_summary">Select a background transparency for the right overlay.</string>
    <string name="rounded_corners_left_overall">Rounded corners on all edges on the left overlay</string>
    <string name="rounded_corners_left_overall_summary">This option adds rounded corners to all corners of the left overlay.</string>
    <string name="rounded_corners_right_overall">Rounded corners on all edges on the right overlay</string>
    <string name="rounded_corners_right_overall_summary">This option adds rounded corners to all corners of the right overlay.</string>
    <string name="rounded_corners_left">Left rounded corners</string>
    <string name="rounded_corners_left_summary">Select a rounded corner size for the left overlay.</string>
    <string name="rounded_corners_right">Right rounded corners</string>
    <string name="rounded_corners_right_summary">Select a rounded corner size for the right overlay.</string>
    <string name="long_press">Long button press</string>
    <string name="long_press_summary">This option adds a long button press. (min. 750ms)</string>
    <string name="other">Other</string>
    <string name="display">Display</string>
    <string name="cpu">Processor</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="settings">Settings</string>
    <string name="replacement_options">Replace</string>
    <string name="select_the_cpu_clock_output_for_the_overlay">Select the CPU clock output for the overlay.</string>
    <string name="cpu_clock_output">CPU clock output</string>
    <string name="select_the_memory_usage_output_for_the_overlay">Select the Memory usage output for the overlay.</string>
    <string name="memory_usage_output">Memory usage output</string>
    <string name="this_option_adds_seconds_to_the_time">Show Seconds for the time in the overlay.</string>
    <string name="display_seconds">Seconds in time</string>
    <string name="show_mbps_instead_of_mb_s_in_the_overlay">Show Mbps instead of MB/s for connection in the overlay.</string>
    <string name="show_mbps">Mbps instead of MB/s</string>
    <string name="show_gb_instead_of_mb_in_the_overlay">Show GB instead of MB for memory usage in the overlay.</string>
    <string name="show_gb">GB instead of MB</string>
    <string name="hide_options">Hide</string>
    <string name="hide_the_left_overlay_completely">Hide the left overlay completely.</string>
    <string name="hide_left_overlay">Hide left overlay</string>
    <string name="hide_all_titles_in_the_overlay">Hide all titles in the overlay.</string>
    <string name="hide_all_titles">Hide all titles</string>
    <string name="hide_all_empty_lines_in_the_overlay">Hide all empty lines in the overlay.</string>
    <string name="hide_all_empty_lines">Hide all empty lines</string>
    <string name="hide_video_title_in_the_overlay">Hide video title in the overlay.</string>
    <string name="hide_video_title">Hide video title</string>
    <string name="hide_display_resolution_in_the_overlay">Hide display resolution in the overlay.</string>
    <string name="hide_display_resolution">Hide display resolution</string>
    <string name="hide_video_resolution_in_the_overlay">Hide video resolution in the overlay.</string>
    <string name="hide_video_resolution">Hide video resolution</string>
    <string name="hide_video_format_in_the_overlay">Hide video format in the overlay.</string>
    <string name="hide_video_format">Hide video format</string>
    <string name="hide_audio_title_in_the_overlay">Hide audio title in the overlay.</string>
    <string name="hide_audio_title">Hide audio title</string>
    <string name="hide_audio_mode_in_the_overlay">Hide audio mode in the overlay.</string>
    <string name="hide_audio_mode">Hide audio mode</string>
    <string name="hide_audio_format_in_the_overlay">Hide audio format in the overlay.</string>
    <string name="hide_audio_format">Hide audio format</string>
    <string name="hide_display_title_in_the_overlay">Hide display title in the overlay.</string>
    <string name="hide_display_title">Hide display title</string>
    <string name="hide_hdr_status_in_the_overlay">Hide HDR status in the overlay.</string>
    <string name="hide_hdr_status">Hide HDR status</string>
    <string name="hide_hdr_priority_in_the_overlay">Hide HDR priority in the overlay.</string>
    <string name="hide_hdr_priority">Hide HDR priority</string>
    <string name="hide_hdr_policy_in_the_overlay">Hide HDR policy in the overlay.</string>
    <string name="hide_hdr_policy">Hide HDR policy</string>
    <string name="hide_color_space_in_the_overlay">Hide color space in the overlay.</string>
    <string name="hide_color_space">Hide color space</string>
    <string name="hide_processor_title_in_the_overlay">Hide processor title in the overlay.</string>
    <string name="hide_processor_title">Hide processor title</string>
    <string name="hide_cpu_load_in_the_overlay">Hide CPU load in the overlay.</string>
    <string name="hide_cpu_load">Hide CPU load</string>
    <string name="hide_cpu_clock_in_the_overlay">Hide CPU clock in the overlay.</string>
    <string name="hide_cpu_clock">Hide CPU clock</string>
    <string name="hide_cpu_temperature_in_the_overlay">Hide CPU temperature in the overlay.</string>
    <string name="hide_cpu_temperature">Hide CPU temperature</string>
    <string name="hide_cpu_governor_in_the_overlay">Hide CPU governor in the overlay.</string>
    <string name="hide_cpu_governor">Hide CPU governor</string>
    <string name="hide_other_title_in_the_overlay">Hide other title in the overlay.</string>
    <string name="hide_other_title">Hide other title</string>
    <string name="hide_time_in_the_overlay">Hide time in the overlay.</string>
    <string name="hide_time">Hide time</string>
    <string name="hide_memory_usage_in_the_overlay">Hide memory usage in the overlay.</string>
    <string name="hide_memory_usage">Hide memory usage</string>
    <string name="hide_app_memory_usage_in_the_overlay">Hide app memory in the overlay.</string>
    <string name="hide_app_memory_usage">Hide app memory</string>
    <string name="hide_connection_in_the_overlay">Hide connection in the overlay.</string>
    <string name="hide_connection">Hide connection</string>
    <string name="hide_app_name_in_the_overlay">Hide app name in the overlay.</string>
    <string name="hide_app_name">Hide app name</string>
    <string name="hide_empty_line">Hide empty line</string>
    <string name="hide_empty_line_between_processor_und_other">Hide empty line between processor und other.</string>
    <string name="hide_empty_line_between_display_und_processor">Hide empty line between display und processor.</string>
    <string name="hide_empty_line_between_audio_and_display">Hide empty line between audio and display.</string>
    <string name="hide_empty_line_between_video_and_audio">Hide empty line between video and audio.</string>
    <string name="temperature_request">CPU temperature request</string>
    <string name="temperature_request_summary">Off: ThermalService\nOn: HardwareProperties</string>
    <string name="temperature_unit">CPU temperature unit</string>
    <string name="temperature_unit_summary">Off: Celsius\nOn: Fahrenheit</string>
    <string name="cpu_temperature">CPU Temperature:</string>
</resources>