<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/cpu">

        <ListPreference
            android:defaultValue="currentPercentage"
            android:entries="@array/cpu_clock_options"
            android:entryValues="@array/cpu_clock_values"
            android:icon="@drawable/ic_processor_24dp"
            android:key="cpu_clock_key"
            android:summary="@string/select_the_cpu_clock_output_for_the_overlay"
            android:title="@string/cpu_clock_output" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_sensor_24dp"
            android:key="request_key"
            android:summary="@string/temperature_request_summary"
            android:title="@string/temperature_request" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_temperature_24dp"
            android:key="celsius_fahrenheit_key"
            android:summary="@string/temperature_unit_summary"
            android:title="@string/temperature_unit" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/other">

        <ListPreference
            android:defaultValue="mbPercentage"
            android:entries="@array/memory_usage_options"
            android:entryValues="@array/memory_usage_values"
            android:icon="@drawable/ic_memory_24dp"
            android:key="memory_usage_key"
            android:summary="@string/select_the_memory_usage_output_for_the_overlay"
            android:title="@string/memory_usage_output" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_time_24dp"
            android:key="text_seconds_key"
            android:summary="@string/this_option_adds_seconds_to_the_time"
            android:title="@string/display_seconds" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_speed_24dp"
            android:key="text_mbps_key"
            android:summary="@string/show_mbps_instead_of_mb_s_in_the_overlay"
            android:title="@string/show_mbps" />

    </PreferenceCategory>
</PreferenceScreen>
