<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/overlay_settings">

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/select_button"
            android:entries="@array/key_code_labels"
            android:entryValues="@array/key_codes"
            android:icon="@drawable/ic_remote_24dp"
            android:key="selected_code_key"
            android:summary="@string/overlay_button_summary"
            android:title="@string/overlay_button" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_long_press_24dp"
            android:key="long_press_key"
            android:summary="@string/long_press_summary"
            android:title="@string/long_press" />

    </PreferenceCategory>
    <PreferenceCategory>

        <CheckBoxPreference
            android:icon="@drawable/ic_title_24dp"
            android:key="empty_title_key"
            android:summary="@string/title_summary"
            android:title="@string/title"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:icon="@drawable/ic_line_break_24dp"
            android:key="empty_line_key"
            android:summary="@string/line_break_summary"
            android:title="@string/line_break"
            android:defaultValue="true" />

    </PreferenceCategory>
    <PreferenceCategory>

        <ListPreference
            android:defaultValue="#E6000000"
            android:entries="@array/background_color_left_options"
            android:entryValues="@array/background_color_left_values"
            android:icon="@drawable/ic_color_background_left_24dp"
            android:key="background_color_left_key"
            android:summary="@string/background_color_left_summary"
            android:title="@string/background_color_left" />

        <ListPreference
            android:defaultValue="#E6000000"
            android:entries="@array/background_color_right_options"
            android:entryValues="@array/background_color_right_values"
            android:icon="@drawable/ic_color_background_right_24dp"
            android:key="background_color_right_key"
            android:summary="@string/background_color_right_summary"
            android:title="@string/background_color_right" />

        <ListPreference
            android:defaultValue="18"
            android:entries="@array/rounded_corners_left_options"
            android:entryValues="@array/rounded_corners_left_values"
            android:icon="@drawable/ic_rounded_corners_left_24dp"
            android:key="rounded_corners_left_key"
            android:summary="@string/rounded_corners_left_summary"
            android:title="@string/rounded_corners_left" />

        <ListPreference
            android:defaultValue="18"
            android:entries="@array/rounded_corners_right_options"
            android:entryValues="@array/rounded_corners_right_values"
            android:icon="@drawable/ic_rounded_corners_right_24dp"
            android:key="rounded_corners_right_key"
            android:summary="@string/rounded_corners_right_summary"
            android:title="@string/rounded_corners_right" />

        <ListPreference
            android:defaultValue="14"
            android:entries="@array/margin_height_options"
            android:entryValues="@array/margin_height_values"
            android:icon="@drawable/ic_top_24dp"
            android:key="margin_height_key"
            android:summary="@string/top_margin_summary"
            android:title="@string/top_margin" />

        <ListPreference
            android:defaultValue="14"
            android:entries="@array/margin_width_options"
            android:entryValues="@array/margin_width_values"
            android:icon="@drawable/ic_right_24dp"
            android:key="margin_width_key"
            android:summary="@string/right_margin_summary"
            android:title="@string/right_margin" />

    </PreferenceCategory>
    <PreferenceCategory>

        <ListPreference
            android:defaultValue="inter"
            android:entries="@array/text_font_options"
            android:entryValues="@array/text_font_values"
            android:icon="@drawable/ic_font_24dp"
            android:key="text_font_key"
            android:summary="@string/text_font_summary"
            android:title="@string/text_font" />

        <ListPreference
            android:defaultValue="12"
            android:entries="@array/text_size_options"
            android:entryValues="@array/text_size_values"
            android:icon="@drawable/ic_size_24dp"
            android:key="text_size_key"
            android:summary="@string/text_size_summary"
            android:title="@string/text_size" />

        <ListPreference
            android:defaultValue="#FFFFFF"
            android:entries="@array/text_color_left_options"
            android:entryValues="@array/text_color_left_values"
            android:icon="@drawable/ic_color_left_24dp"
            android:key="text_color_left_key"
            android:summary="@string/text_color_left_summary"
            android:title="@string/text_color_left" />

        <ListPreference
            android:defaultValue="#FFFFFF"
            android:entries="@array/text_color_right_options"
            android:entryValues="@array/text_color_right_values"
            android:icon="@drawable/ic_color_right_24dp"
            android:key="text_color_right_key"
            android:summary="@string/text_color_right_summary"
            android:title="@string/text_color_right" />

    </PreferenceCategory>
    <PreferenceCategory>

        <Preference
            android:key="pref_version_key"
            android:summary="Link"
            android:title="Version"
            android:icon="@drawable/ic_remote_24dp" />

    </PreferenceCategory>
</PreferenceScreen>
